Fix the overflow of the left hand nav

--- a/app/assets/sass/elements/_layout.scss
+++ b/app/assets/sass/elements/_layout.scss
@@ -190,14 +190,12 @@ display:none !important;
 
 .main-nav li {
   margin-bottom: 5px;
-  padding: 10px 0 10px 25px;
+  padding: 10px 0 10px 35px;
   margin-right:0;
   font-size:0.9em !important;
-  white-space:nowrap;
  }
 
 .main-nav li a {
-  padding: 10px;
   width: 100%; }
 
 .main-nav li.selected a {
